--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.main{
+  width: 100%;
+  /* height: 520px; */
+  /* position: relative; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* overflow: hidden; */
+}
